[gd_scene load_steps=19 format=2]

[ext_resource path="res://OnClick/onClick4/SpotDiffWorld4.gd" type="Script" id=1]
[ext_resource path="res://OnClick/images/STDImg2.1.png" type="Texture" id=2]
[ext_resource path="res://OnClick/images/STDImg2.png" type="Texture" id=3]
[ext_resource path="res://OnClick/onClick4/Area2D.gd" type="Script" id=4]
[ext_resource path="res://OnClick/images/red_circle.png" type="Texture" id=5]
[ext_resource path="res://OnClick/onClick4/Area2D2.gd" type="Script" id=6]
[ext_resource path="res://OnClick/onClick4/Area2D3.gd" type="Script" id=7]
[ext_resource path="res://OnClick/onClick4/Area2D4.gd" type="Script" id=8]
[ext_resource path="res://OnClick/onClick4/Area2D5.gd" type="Script" id=9]
[ext_resource path="res://Fonts/Lvl4Disp.tres" type="DynamicFont" id=10]
[ext_resource path="res://OnClick/onClick4/Label.gd" type="Script" id=11]
[ext_resource path="res://OnClick/images/PurpleBackground.png" type="Texture" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 10.7936

[sub_resource type="CircleShape2D" id=2]
radius = 11.7727

[sub_resource type="CircleShape2D" id=3]
radius = 27.8497

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6.12951, 13.9391 )

[sub_resource type="CircleShape2D" id=5]
radius = 9.59096

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 330.205, 246.92 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Img_a" type="Sprite" parent="."]
position = Vector2( 160, 240 )
z_index = -10
texture = ExtResource( 2 )

[node name="Img_b" type="Sprite" parent="."]
position = Vector2( 490, 240 )
z_index = -10
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 242.126, 53.0907 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 572.736, 49.8731 )
shape = SubResource( 1 )

[node name="diff_1_a" type="Sprite" parent="Area2D"]
visible = false
position = Vector2( 242.107, 53.1051 )
scale = Vector2( 0.0954764, 0.102381 )
texture = ExtResource( 5 )

[node name="diff_1_b" type="Sprite" parent="Area2D"]
visible = false
position = Vector2( 572.86, 49.6848 )
scale = Vector2( 0.0954764, 0.102381 )
texture = ExtResource( 5 )

[node name="Area2D2" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 120.661, 394.963 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 451.271, 394.963 )
shape = SubResource( 2 )

[node name="diff_2_a" type="Sprite" parent="Area2D2"]
visible = false
position = Vector2( 120.616, 394.477 )
scale = Vector2( 0.096991, 0.101682 )
texture = ExtResource( 5 )

[node name="diff_2_b" type="Sprite" parent="Area2D2"]
visible = false
position = Vector2( 450.899, 394.813 )
scale = Vector2( 0.096991, 0.101682 )
texture = ExtResource( 5 )

[node name="Area2D3" type="Area2D" parent="."]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( 160.077, 385.31 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( 491.491, 385.31 )
shape = SubResource( 3 )

[node name="diff_3_a" type="Sprite" parent="Area2D3"]
visible = false
position = Vector2( 160.479, 385.31 )
scale = Vector2( 0.237024, 0.233571 )
texture = ExtResource( 5 )

[node name="diff_3_b" type="Sprite" parent="Area2D3"]
visible = false
position = Vector2( 491.089, 385.31 )
scale = Vector2( 0.237024, 0.233571 )
texture = ExtResource( 5 )

[node name="Area2D4" type="Area2D" parent="."]
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
position = Vector2( 47.4599, 252.583 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D4"]
position = Vector2( 379.679, 250.17 )
shape = SubResource( 4 )

[node name="diff_4_a" type="Sprite" parent="Area2D4"]
visible = false
position = Vector2( 47.705, 252.582 )
scale = Vector2( 0.0915061, 0.157101 )
texture = ExtResource( 5 )

[node name="diff_4_b" type="Sprite" parent="Area2D4"]
visible = false
position = Vector2( 377.894, 249.973 )
scale = Vector2( 0.0915061, 0.157101 )
texture = ExtResource( 5 )

[node name="Area2D5" type="Area2D" parent="."]
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D5"]
position = Vector2( 221.211, 382.092 )
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D5"]
position = Vector2( 551.017, 384.505 )
shape = SubResource( 5 )

[node name="diff_5_a" type="Sprite" parent="Area2D5"]
visible = false
position = Vector2( 221.317, 381.933 )
scale = Vector2( 0.074675, 0.0750824 )
texture = ExtResource( 5 )

[node name="diff_5_b" type="Sprite" parent="Area2D5"]
visible = false
position = Vector2( 551.134, 384.42 )
scale = Vector2( 0.074675, 0.0750824 )
texture = ExtResource( 5 )

[node name="Area2D6" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D6"]
position = Vector2( 323.682, 239.588 )
shape = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 324.243, 253 )
current = true
zoom = Vector2( 1.1, 1.55 )

[node name="Timer_display" type="Label" parent="."]
margin_left = 293.0
margin_top = 490.0
margin_right = 333.0
margin_bottom = 504.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.803922, 0.027451, 0.027451, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
script = ExtResource( 11 )

[node name="Timer" type="Timer" parent="Timer_display"]

[node name="Diffs_found_display" type="Label" parent="."]
margin_left = 590.0
margin_top = 490.0
margin_right = 630.0
margin_bottom = 504.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.121569, 0.509804, 0.211765, 1 )
custom_colors/font_outline_modulate = Color( 0.156863, 0.156863, 0.156863, 1 )

[node name="HP_display" type="Label" parent="."]
margin_left = 20.0
margin_top = 490.0
margin_right = 60.0
margin_bottom = 504.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.121569, 0.509804, 0.211765, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )

[node name="Background_color" type="Sprite" parent="."]
position = Vector2( 280.841, 214.994 )
scale = Vector2( 1.82479, 1.91487 )
z_index = -100
texture = ExtResource( 12 )
[connection signal="input_event" from="Area2D" to="Area2D" method="_on_Area2D_input_event"]
[connection signal="visibility_changed" from="Area2D/diff_1_a" to="." method="_on_diff_1_a_visibility_changed"]
[connection signal="visibility_changed" from="Area2D/diff_1_a" to="Area2D" method="_on_diff_1_a_visibility_changed"]
[connection signal="input_event" from="Area2D2" to="Area2D2" method="_on_Area2D2_input_event"]
[connection signal="visibility_changed" from="Area2D2/diff_2_a" to="." method="_on_diff_2_a_visibility_changed"]
[connection signal="visibility_changed" from="Area2D2/diff_2_a" to="Area2D2" method="_on_diff_2_a_visibility_changed"]
[connection signal="input_event" from="Area2D3" to="Area2D3" method="_on_Area2D3_input_event"]
[connection signal="visibility_changed" from="Area2D3/diff_3_a" to="." method="_on_diff_3_a_visibility_changed"]
[connection signal="visibility_changed" from="Area2D3/diff_3_a" to="Area2D3" method="_on_diff_3_a_visibility_changed"]
[connection signal="input_event" from="Area2D4" to="Area2D4" method="_on_Area2D4_input_event"]
[connection signal="visibility_changed" from="Area2D4/diff_4_a" to="." method="_on_diff_4_a_visibility_changed"]
[connection signal="visibility_changed" from="Area2D4/diff_4_a" to="Area2D4" method="_on_diff_4_a_visibility_changed"]
[connection signal="input_event" from="Area2D5" to="Area2D5" method="_on_Area2D5_input_event"]
[connection signal="visibility_changed" from="Area2D5/diff_5_a" to="." method="_on_diff_5_a_visibility_changed"]
[connection signal="visibility_changed" from="Area2D5/diff_5_a" to="Area2D5" method="_on_diff_5_a_visibility_changed"]
[connection signal="input_event" from="Area2D6" to="." method="_on_Area2D6_input_event"]
[connection signal="timeout" from="Timer_display/Timer" to="Timer_display" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer_display/Timer" to="." method="_on_Timer_timeout"]
